transfer profile page

--- a/_toc.yml
+++ b/_toc.yml
@@ -9,6 +9,7 @@ parts:
     - file: Comment
   - caption: Infos
     chapters:
+    - file: Profile    
     - file: CV/CV_Main
     - file: CV/Web-Dev
     - file: Playlist/Playlist
