--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ html:
   extra_navbar              : ""
   extra_footer: |
   
-      <img class="Green-WS" src="https://api.thegreenwebfoundation.org/greencheckimage/deugz.github.io?nocache=true" alt="This website is hosted Green - checked by thegreenwebfoundation.org"/><br><img class="CC_licence" src="https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by-nc-sa.svg" alt="Licence CC BY NC SA 2"/>  
+      <br><img class="CC_licence" src="https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by-nc-sa.svg" alt="Licence CC BY NC SA 2"/>  
    
    
 #  google_analytics_id       : G-CPYX9S0KDS  
@@ -43,7 +43,7 @@ html:
   comments:
     hypothesis              : true
     utterances              : 
-      repo: "https://github.com/Deugz/nb-master"
+      repo: "https://github.com/Deugz/jb-profile"
   announcement              : "⚠ In Development  ⚠"
 
 sphinx:
