--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ html:
   use_issues_button         : true
   use_multitoc_numbering    : false
   extra_navbar              : "" 
-  google_analytics_id       : G-6PKM0BESDG  
+  google_analytics_id       : "G-6PKM0BESDG"  
   home_page_in_navbar       : false
   baseurl                   : "https://deugz.github.io/nb-profile/_build/html/"
   comments:
