--- a/_config.yml
+++ b/_config.yml
@@ -32,13 +32,13 @@ html:
   use_issues_button         : true
   use_multitoc_numbering    : false
   extra_navbar              : "" 
-  google_analytics_id       : "G-6PKM0BESDG"  
+  google_analytics_id       : G-6PKM0BESDG  
   home_page_in_navbar       : false
   baseurl                   : "https://deugz.github.io/nb-profile/_build/html/"
   comments:
     hypothesis              : true
     utterances              : 
-      repo: "https://github.com/Deugz/jb-profile"
+      repo: "https://github.com/Deugz/nb-profile"
   announcement              : "⚠ In Development  ⚠"
 
 sphinx:
